<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Dives</string>
    <string name="app_name">Dive Planner</string>
	<string name="menunewdive">New Dive</string>
	
    <string name="date_widgets_example_dateDisplay_text"></string>
    <string name="date_widgets_example_pickTime_text">change the time</string>
    <string name="date_widgets_example_pickDate_text">change the date</string>
    <string name="quit">Quit</string>
    <string name="newdive_save">Save</string>
    <string name="app_description">It is now possible to store  your dives on your mobile phone.</string>
    <string name="logbook_button_label">Logbook</string>
    <string name="logbook_planner_label">Planner</string>
    <string name="OpenPlanner">Accept</string>
    <string name="OpenDiveLog">Open dive log </string>
    <string name="welcome_intro">This software is provided free of charge for experienced mixed gas rebreather divers to evaluate m-value gradient profiles based on Erik Baker\'s m-value gradient calculations and the Buhlmann ZHL16-B decompression model.\
    This software is experimental, it probably contains bugs and should not be relied upon for actual dives. Use it at your own risk.\n\n\
    <b>WARNING</b>\nIf you follow dive schedules generated by this software you could suffer decompression sickness, serious injury or possibly death.\
    The author does not warrant that this software accurately reflects Buhlmann\'s algorithms, or that it will produce safe, reliable, results.\n\n\
    Diving in general is fraught with risk, and decompression diving using mixed gases and rebreathers adds significantly more risk.\
    This software is not intended for uneducated users. This software and the decompression schedules it produces are tools for experienced mixed-gas rebreather decompression divers only. If you have not been properly trained in mixed-gas rebreather decompression diving by an internationally recognized technical certification agency and/or don\'t have a firm handle on decompression planning and mixed-gas diving, DO NOT USE THIS SOFTWARE OR THE DIVE SCHEDULES CREATED BY IT.\n\n\
    If you do not understand or do not agree DO NOT use this software and uninstall it from your device.\n\n\
    LICENSE\nThis software is \ncopyright © 2005-2010 - Guy Wittig.\ncopyright © 2010-2012 - Maciej Kaniewski.\ncopyright © 2018-2020 - Fabrice Cetre.\n\n

    This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation version 3.\n\n\
    This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.\n\n\n</string>
    <string name="gas_dialog_he2_label">He2</string>
    <string name="gas_dialog_o2_label">O2</string>
    <string name="gas_dialog_ppo2_label">ppO2</string>
    <string name="gas_dialog_n2_label">N2</string>
    <string name="gas_dialog_mod_label">MOD</string>
    <string name="gas_dialog_title">Edit gas</string>
    <string name="preferences">Preferences</string>
    <string name="button_add_gas">Add</string>
    <string name="oc_bailout_checkbox_text">Gas switch/Bailout</string>
    <string name="backupfile">ascubabck.xml</string>
    <string name="gaslistbutton">Gas List</string>
    <string name="profilebutton">Dive Profile</string>
    <string name="calcbutton">RunTime</string>
    <string name="mvprefs_laststop_title">Last stop</string>
    <string name="mvprefs_laststop_dial">Value between 1 - 10</string>
    <string name="mvprefs_laststop_sum">Depth of your last deco stop</string>
    <string name="mvprefs_units_title">Units</string>
    <string name="mvprefs_units_sum">Change units between metric and imperial</string>
    <string name="mvprefs_gradientfactor_title">Gradient Factors</string>
    <string name="mvprefs_gradientfactorlow_title">GF Low</string>
    <string name="mvprefs_gradientfactorlow_dial">Value between 0 - 95 and no greater than gf high</string>
    <string name="mvprefs_gradientfactorlow_sum">Low value of gradient factor</string>
    <string name="mvprefs_gradientfactorhigh_title">High</string>
    <string name="mvprefs_gradientfactorhigh_dial">Value between 0 - 95 and greater than gf low</string>
    <string name="mvprefs_gradientfactorhigh_sum">High value of gradient factor</string>
    <string name="mvprefs_conso_title">RVM</string>
    <string name="mvprefs_consodive_title">Dive</string>
    <string name="mvprefs_conso_dial">Value between 0 - 100</string>
    <string name="mvprefs_consodive_sum">Respiratory Minute Volume for dive</string>
    <string name="mvprefs_consodeco_title">Dive</string>
    <string name="mvprefs_consodeco_sum">Respiratory Minute Volume for deco</string>
    <string name="mvprefs_param_title">Parameters</string>
    <string name="mvprefs_detail_title">Detailed View</string>
    <string name="mvprefs_detail_on">Detailed</string>
    <string name="mvprefs_detail_off">Brief</string>
    <string name="mvprefs_setpoint_title">Default setPoint</string>
    <string name="mvprefs_constraints_title">Constraints</string>
    <string name="mvprefs_descent_title">Descent rate</string>
    <string name="mvprefs_ascent_title">Ascent Rate</string>
    <string name="mvprefs_altitude_title">Altitude</string>
    <string name="mvprefs_modele_title">Decompression Model</string>
    <string name="mvprefs_modele_sum"></string>
    <string name="mvprefs_multilevel_title">MultiLevel</string>
    <string name="mvprefs_multilevel_sumon">Multi level</string>
    <string name="mvprefs_multilevel_sumoff">SquareDive</string>

</resources>
