<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
>
	<LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
		        <Button
				android:id="@+id/dive_planner_gasList"
				android:layout_weight="1"
		        android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/gaslistbutton"
				/>
				 <Button
				android:id="@+id/dive_planner_profile"
				android:layout_weight="1"
		        android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/profilebutton"
				/>
				 <Button
				android:id="@+id/dive_planner_calculate"
				android:layout_weight="1"
		        android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:text="@string/calcbutton"
				/>
	</LinearLayout>
	<LinearLayout
	 		android:id="@+id/testme"
	        
			android:layout_weight="1"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent">
	        
    </LinearLayout>
</LinearLayout>
